Bug 138936 - gradient missing under RTL from writer comment margins
Summary: gradient missing under RTL from writer comment margins
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-15 11:52 UTC by Caolán McNamara
Modified: 2020-12-15 20:13 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
an example (9.93 KB, application/vnd.oasis.opendocument.text)
2020-12-15 11:53 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2020-12-15 11:52:59 UTC
Description:
with the attached demo under RTL gradients are missing under RTL from writer comment margins

Steps to Reproduce:
1. export SAL_RTL_ENABLED=1
2. export SAL_USE_VCLPLUGIN=gtk3
3. ./instdir/program/swriter ~/Documents/annotation.odt

also reproducible with
1. export SAL_USE_VCLPLUGIN=gen
2. export SAL_ENABLESKIA=1
3. export SAL_USE_VCLPLUGIN=gtk3
4. ./instdir/program/swriter ~/Documents/annotation.odt

Actual Results:
the gradient in comments in the margins is missing

Expected Results:
gradients


Reproducible: Always


User Profile Reset: No



Additional Info:
This is noticeable since...

commit 20c09d351ee060bdde13d92d2bf86dd998cdb0cb (HEAD)
Date:   Tue Sep 22 15:20:57 2020 +0200

    use vcl lin. gradient drawing in drawinglayer + cairo impl.
    
    This adds a divert for drawing of linear gradients drawing, which
    can be implemented natively with a much higher quality and speed.
    
    This also adds a implementation of drawing linear gradients with
    cairo.

when the drawGradient impls were unstubbed
Comment 1 Caolán McNamara 2020-12-15 11:53:31 UTC
Created attachment 168192 [details]
an example
Comment 2 Caolán McNamara 2020-12-15 11:59:47 UTC
https://gerrit.libreoffice.org/c/core/+/107750/1 makes the gradient visible again.
Comment 3 Commit Notification 2020-12-15 19:38:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9902a53ee9c6d74fef6ab0ae9f602cf7895fecfd

tdf#138936 gradient missing under RTL from writer comment margins

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-12-15 20:01:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/0932a7a2c3b64a30f6928007a7d60a2073660f40

tdf#138936 gradient missing under RTL from writer comment margins

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.