tdf#138936 gradient missing under RTL from writer comment margins

Change-Id: I57533f033f9528b7c89162967b392eb5abb4d76a